@@ -1,0 +1,4 @@
+<citation-layouts>
+  <layout id="default">Default</layout>
+  <layout id="yellow" available="zeit.arbeit.interfaces.IZARContent">ZAR Only</layout>
+</citation-layouts>
