@@ -4,6 +4,8 @@ zeit.content.article changes
 3.25.0 (unreleased)
 -------------------
 
+- ARBEIT-86: Add citation layout source
+
 - ZON-4006: Move mobile fields to their own form
 
 - MAINT: Remove superfluous IEditable interface
